--- a/public/osce/admin/css/common.css
+++ b/public/osce/admin/css/common.css
@@ -302,7 +302,7 @@ body .layer-ext-moon .layui-layer-btn a {border: 1px solid #1ab394;}
 }
 
 /*操作居右*/
-table tbody tr td:last-child{width: 100px!important;}
+table tbody tr td:last-child{width: 120px;}
 /*错误提示*/
 .msg-error{
     background: #f2dede!important;
