--- a/public/osce/admin/css/common.css
+++ b/public/osce/admin/css/common.css
@@ -213,7 +213,7 @@ a.btn:hover {text-decoration: none;}
 .swiper-pagination{ bottom: 0; left:50%; margin-left:-20px;}
 .swiper-pagination span{margin:0 0.2em 0 0 }
 
-.images_upload{display:inline-block;height:180px;border:1px dashed #ccc;cursor:pointer;background:url(../images/add_img.png) no-repeat center;text-align: center;}
+.images_upload{display:inline-block;height:250px;width:197px;border:1px dashed #ccc;cursor:pointer;background:url(../images/add_img.png) no-repeat center;text-align: center;}
 .images_upload input{width:100%;height:100%;opacity:0;cursor:pointer;}
 /*上传图片按钮样式*/
 .images_upload1{
