--- a/public/osce/admin/css/common.css
+++ b/public/osce/admin/css/common.css
@@ -106,8 +106,8 @@ a{-webkit-touch-callout:none;}
 .radio_box{width:100%;height:20px;color:#333;margin: 5px 0;}
 .radio_label{position:relative;width:100px;}
 .radio_label .left{color:#333;}
-.radio_icon{width:16px;height:16px;margin:2px 5px;background:url("../images/green.png") no-repeat;background-size:100% auto; background-position:0 0}
-.radio_icon.check{background-position:0 -21px}
+.radio_icon{width:16px;height:16px;margin:2px 5px;background:url("../images/green.png") no-repeat;background-size:auto 16px; background-position:-79px 1px}
+.radio_icon.check{background-position:-111px 0}
 .radio_label input{position:absolute;left:-999px;top:0;opacity:0}
 
 /**
