--- a/public/osce/admin/css/common.css
+++ b/public/osce/admin/css/common.css
@@ -104,7 +104,7 @@ a{-webkit-touch-callout:none;}
 /*性别分类*/
 .course_student_type{overflow: hidden;}
 .radio_box{width:100%;height:20px;color:#333;margin: 5px 0;}
-.radio_label{position:relative;width:100px;}
+.radio_label{position:relative;}
 .radio_label .left{color:#333;}
 .radio_icon{width:16px;height:16px;margin:2px 5px;background:url("../images/green.png") no-repeat;background-size:auto 16px; background-position:-79px 1px}
 .radio_icon.check{background-position:-111px 0}
