--- a/public/osce/admin/css/common.css
+++ b/public/osce/admin/css/common.css
@@ -61,6 +61,7 @@ a{-webkit-touch-callout:none;}
 .marb_10{margin-bottom:1em}
 .marb_15{margin-bottom:1.5em}
 .marb_25{margin-bottom: 25px}
+.marb_40{margin-bottom: 40px}
 .marr_5{margin-right:0.5em}
 .marl_10{margin-right:1em}
 .marl_5{margin-left:0.5em}
